<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BustyBetty</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">pmoney is da bomb!!!!! SUCK MY ASS IT SMELLS</string>
    <string name="next">next</string>
    <string name="submit">submit</string>
    <string name="workout">workout:</string>
    <string name="hint">lifting</string>
    <string name="haveselected">you\'ve selected</string>
    <string name="pplpresent">people present:</string>
    <string name="empty"></string>
    <string name="temp1">blah, blah, blah, blah, blah, filler, filler, filler, filler, shit, balls</string>
    <string name="temp2">shit</string>
    <string name="submitting">submitting - this will take a few seconds</string>
    
</resources>