<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
	<TextView
         android:id="@+id/workouttextview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:text="@string/workout"
         android:textAppearance="?android:attr/textAppearanceLarge" />

     <EditText
         android:id="@+id/workouttextedit"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginRight="10dp"
         android:layout_alignBaseline="@+id/workouttextview"
         android:layout_alignBottom="@+id/workouttextview"
         android:layout_toRightOf="@+id/workouttextview"
         android:ems="10"
         android:hint="@string/hint" >

     </EditText>

     <Button
         android:id="@+id/nextbutton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/workouttextedit"
         android:layout_marginRight="18dp"
         android:layout_marginTop="14dp"
         android:text="@string/next" />
     
</RelativeLayout>